<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.dualcom.xai.xyz.dualcom.xai.AlarmActivity"
    android:background="@color/main_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_text"
        android:id="@+id/textView15" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_on_off"
        android:id="@+id/on_alarm"
        android:textColor="#FFF"
        android:layout_alignBottom="@+id/numberPicker"
        android:layout_alignRight="@+id/textView15"
        android:layout_alignEnd="@+id/textView15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ChangeMusic"
        android:layout_alignTop="@+id/numberPicker"
        android:layout_toRightOf="@+id/numberPicker"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp"
        android:gravity="center"
        android:clickable="false">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView"
            android:background="@drawable/audio"
            android:layout_alignTop="@+id/numberPicker"
            android:layout_centerHorizontal="true"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/select_audio"
            android:id="@+id/file_path"
            android:layout_alignTop="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:textSize="15dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
</RelativeLayout>
