<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:showDividers="end"
        android:gravity="center"
        android:background="#000">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id2">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/top_color">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="0dp"
                        android:adjustViewBounds="true"
                        android:baselineAlignBottom="true"
                        android:id="@+id/ProfileIMG"
                        android:scaleType="centerCrop"
                        android:minHeight="50dp"
                        android:clickable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/GET_DATA"
                        android:id="@+id/LoadText"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/ProfileEdit"
                        android:background="@drawable/profile_edit_btn"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="5dp" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/ProfileEditApply"
                        android:background="@drawable/profile_edit_btn_apply"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="5dp"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:id="@+id/ProfileAvailable">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Фамилия Имя Отчество"
                    android:id="@+id/ProfileName"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ProfileRank"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/ProfileExtra"
                    android:textColor="@color/dark_grey"
                    android:gravity="center"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:id="@+id/ProfileUpdate"
                android:visibility="gone">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/ProfileEditName"
                    android:textColor="#000"
                    android:hint="@string/teacher_name" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ProfileEditRank"
                    android:textColor="#000"
                    android:hint="@string/teacher_rank" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ProfileEditExtra"
                    android:textColor="#000"
                    android:hint="@string/teacher_extra" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>