<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.dualcom.xai.fragments.ListFragment">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/_list_zone"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:showDividers="end">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/extra_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0"
                    android:text="@string/LastSel"
                    android:textColor="@color/white" />

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/tabs_style"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:showDividers="none"
                    android:tabStripEnabled="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadGroup"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/logo_big" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GET_DATA"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/SearchPanel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/SearchGroup"
                            android:layout_width="fill_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/edittext_search"
                            android:hint="@string/Search"
                            android:maxLength="6"
                            android:paddingLeft="50dp"
                            android:textColor="#000"></EditText>

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:background="@drawable/search" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <FrameLayout

                        android:id="@android:id/tabcontent"

                        android:layout_width="0dp"

                        android:layout_height="0dp"

                        android:layout_weight="0" />

                    <view
                        android:id="@+id/pager"
                        class="org.dualcom.xai.MyClass.WrapContentViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true" />


                </LinearLayout>

                <TextView
                    android:id="@+id/_long_press"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/notiseDel"
                    android:textColor="@color/dark_grey"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </TabHost>

</FrameLayout>
